# Adaptive_Inertia_controller_on_Pixhawk

./: .gitignore  AIC_IMPLEMENTATION_COMPLETE.md  AIC_INDEX.md  AIC_QUICK_REFERENCE.md  DELIVERABLES_SUMMARY.md  IJDS_AIC_quad.tex  IMPLEMENTATION_GUIDE_AIC.md  LICENSE  MANIFEST.md  MIGRATION_COMPLETE.md  MIGRATION_SUMMARY.sh  MOTOR_CONNECTION_GUIDE.md  PHASE_TEST_RESULTS.md  PIXHAWK_2_4_8_MIGRATION_GUIDE.md  PIXHAWK_AIC_COMPILATION_GUIDE.md  PIXHAWK_MIGRATION_CHECKLIST.md  PIXHAWK_MIGRATION_INDEX.md  PIXHAWK_QUICK_START.md  PIXHAWK_START_HERE.md  PROJECT_COMPLETE.md  PROJECT_SUMMARY.md  QUICKSTART.md  RC_OVERRIDE_INTEGRATION.md  RC_OVERRIDE_README.md  RC_OVERRIDE_SUMMARY.md  README.md  THREE_PHASE_CHECKLIST.md  VISUAL_OVERVIEW.md  WORKFLOW.md  connect_erle.sh  connect_erle_usb.sh  erle_wifi_commands.sh  examples.py  find_erlebrain.sh  monitor_usb.sh  phase1_automated.py  phase2_benchtop_modified.py  phase2_test.py  phase3_test.py  power_diagnostic.py  (+7 more)
config/: flight_params.yaml  flight_params_pixhawk.yaml
missions/: simple_square.json  survey_pattern.json  waypoint_mission.json
src/: __init__.py  autonomous_flight.py  mission_planner.py  rc_override_controller.py  safety_manager.py  telemetry_monitor.py
src/modules/attitude_controller_aic/: AttitudeControllerAIC.cpp  CMakeLists.txt
src/modules/attitude_controller_aic/include/: adaptive_estimator.hpp  attitude_controller_aic.hpp  iwg_adapter.hpp  regressor.hpp  so3_utils.hpp
src/utils/: __init__.py  config.py  connection.py  logger.py
tests/: __init__.py  test_config.py  test_safety_manager.py
